# dotenv-vault-rs

./: Cargo.toml
src/: log.rs  vault.rs
